# shenidam

./: CMakeLists.txt  MacroEnsureVersion.cmake  OptimizeForArchitecture.cmake  README.txt  config.h.in  qshenidam.desktop.in  qshenidam.in  qshenidam.py  shenidam-av.in  shenidam-av.py  shenidam.c  shenidam.h  shenidam.py  shenidam_av.in  shenidam_main.cpp
cmake/: FindFFTWF.cmake  FindSamplerate.cmake  FindSndfile.cmake
include/: shenidam.h
python/: qshenidam.py  shenidam_av.py
src/: shenidam.c  shenidam_main.cpp
templates/: config.h.in  shenidam-av.in
tools/: tobase64.py
